@@ -154,14 +154,14 @@ Common.updates.updateAvailable=Update Available
 Common.updates.updateNow=Update Now!
 Common.updates.askMeLater=Ask me later
 Common.updates.skipThisUpdate=Skip this update
-Common.updates.advanced=Advanced...
+Common.updates.advanced=Advanced options...
 Common.updates.automaticallyCheck=Automatically check for updates
 Common.updates.youHaveCurrent=You have the most current version ({0}) of {1}.
 Common.updates.errorMessage=\
 An error was encountered while trying to access the PhET website.<br>\
 Please try again later, or visit {0}.<br>\
 If the problem persists, please contact {1}.
-Common.updates.tryIt=Try the new version before you update by clicking here.
+Common.updates.tryIt=Try the new version before you update.
 Common.updates.versionComparison=<html>Your current version of \"{0}\" is {1}.<br>A newer version ({2}) is available.</html>
 
 # Tracking feature
